Added Welsh translation from Alan Cox.
2003-05-19  Richard Hult  <richard@imendo.com>

	* cy.po: Added Welsh translation from Alan Cox.

	* pt_BR.po: Added Portuguese (Brazillian) translation from Gustavo
	Franco.

	* sr.po: Added Serbian translation from Bosko Andjelkovic.

	* ja.po: Added Japanese translation from Takeshi AIHANA.

	* bg.po: Added Bulgarian translation from Eto Demercel.

	* zh_CN.po: Added simplified Chinese translation from Xiping Wang.

	* fr.po: Update from Baptiste Mille-Mathias.

	* it.po: Update from Luca Ferretti.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
+data/glade/drw-preferences.glade
 src/main.c
 src/drwright.c
-src/drw-preferences.glade
 src/drw-break-window.c
 src/drw-monitor.c
 src/drw-preferences.c
