Added more entries. Small additions and changes to the Swedish
2003-05-20  Christian Rose  <menthos@menthos.com>

	* .cvsignore: Added more entries.
	* sv.po: Small additions and changes to the Swedish
	translation.

--- a/po/.cvsignore
+++ b/po/.cvsignore
@@ -1,8 +1,14 @@
-*.gmo
 POTFILES
 Makefile.in.in
 Makefile.in
 Makefile
-messages.mo
-drwright.pot
+*.gmo
+*.mo
+*.pot
+messages
+missing
+cat-id-tbl.c
+stamp-cat-id
+po2tbl.sed
+po2tbl.sed.in
 .intltool-merge-cache
