--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 AC_INIT(src)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(drwright, 0.16)
+AM_INIT_AUTOMAKE(drwright, 0.17)
 
 AM_MAINTAINER_MODE
 
@@ -62,7 +62,7 @@ GETTEXT_PACKAGE=drwright
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", "")
 
-ALL_LINGUAS="bg cy cs da de es fr it ja ko nl pl pt pt_BR sr sv tr zh_CN zh_TW"
+ALL_LINGUAS="bg ca cy cs da de es fr it ja ko nl pl pt pt_BR sr sv tr zh_CN zh_TW"
 
 AM_GLIB_GNU_GETTEXT
 
