--- a/configure.in
+++ b/configure.in
@@ -81,7 +81,7 @@ GETTEXT_PACKAGE=drwright
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", "")
 
-ALL_LINGUAS="az bg ca cy cs da de el es fr it ja ko ml mn ms nl no pl pt pt_BR ru sk sq sr sr@Latn sv tr zh_CN zh_TW"
+ALL_LINGUAS="az bg ca cy cs da de el es fr hr it ja ko ml mn ms nl no pl pt pt_BR ru sk sq sr sr@Latn sv tr zh_CN zh_TW"
 
 AM_GLIB_GNU_GETTEXT
 
