--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 AC_INIT(src)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(drwright, 0.17cvs)
+AM_INIT_AUTOMAKE(drwright, 0.18)
 
 AM_MAINTAINER_MODE
 
@@ -11,7 +11,7 @@ AM_PROG_LIBTOOL
 AC_PATH_XTRA
 AM_PATH_GLIB_2_0
 
-AC_PROG_INTLTOOL
+AC_PROG_INTLTOOL([0.29])
 
 dnl ==========================================================================
 dnl
@@ -43,7 +43,7 @@ dnl ==========================
 AC_ARG_ENABLE(dbus, [  --enable-dbus=[no/yes/auto]    compile with d-bus support.],,enable_dbus=auto)
 
 if test "x$enable_dbus" != "xno"; then
-   dbus_pkgconfig="dbus-1 >= 0.20 dbus-glib-1"
+   dbus_pkgconfig="dbus-1 >= 0.22 dbus-glib-1"
    PKG_CHECK_MODULES(DBUS, $dbus_pkgconfig, have_dbus=yes, have_dbus=no)
    if test x$have_dbus = xyes; then
       AC_DEFINE(HAVE_DBUS, 1, d-bus support)
