--- a/configure.in
+++ b/configure.in
@@ -107,7 +107,7 @@ GETTEXT_PACKAGE=drwright
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", "")
 
-ALL_LINGUAS="az bg ca cs cy da de el en_CA en_GB es fi fr gu hr is it ja ko ml mn ms ne nl no pl pt pt_BR ru rw sk sq sr sr@Latn sv tr uk vi wa zh_CN zh_TW"
+ALL_LINGUAS="az bg ca cs cy da de el en_CA en_GB es fi fr gu hr is it ja ko ml mn ms nb ne nl pl pt pt_BR ru rw sk sq sr sr@Latn sv tr uk vi wa zh_CN zh_TW"
 
 AM_GLIB_GNU_GETTEXT
 
