--- a/configure.in
+++ b/configure.in
@@ -107,7 +107,7 @@ GETTEXT_PACKAGE=drwright
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", "")
 
-ALL_LINGUAS="ar az bg ca cs cy da de dz el en_CA en_GB es fi fr gu hr is it ja ko ml mn ms nb ne nl pl pt pt_BR ru rw sk sl sq sr sr@Latn sv tr uk vi wa zh_CN zh_TW"
+ALL_LINGUAS="ar az bg ca cs cy da de dz el en_CA en_GB es fi fr gu hr is it ja ko ml mn ms nb ne nl oc pl pt pt_BR ru rw sk sl sq sr sr@Latn sv tr uk vi wa zh_CN zh_TW"
 
 AM_GLIB_GNU_GETTEXT
 
