--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,5 @@
-data/glade/drw-preferences.glade
 src/main.c
 src/drwright.c
 src/drw-break-window.c
 src/drw-monitor.c
-src/drw-preferences.c
-src/eggtrayicon.c
+src/drwright.schemas.in
