--- a/configure.in
+++ b/configure.in
@@ -1,123 +1,107 @@
-AC_INIT(src)
-AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(drwright, 0.18)
+# This programme is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public
+# License as published by the Free Software Foundation; either
+# version 2 of the License, or (at your option) any later version.
+#
+# This programme is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public
+# License along with this programme; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
+AC_INIT([Typing Break],
+        [2.33.0],
+        [http://bugzilla.gnome.org/enter_bug.cgi?product=drwright],
+        [drwright])
+
+AC_CONFIG_SRCDIR([src/main.c])
+AC_CONFIG_HEADERS([config.h])
+
+AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])
+
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+
+if test -z "$enable_maintainer_mode"; then
+  enable_maintainer_mode=yes
+fi
 AM_MAINTAINER_MODE
 
-AC_ISC_POSIX
-AC_PROG_CC
 AC_STDC_HEADERS
+AC_PROG_CC
+AM_PROG_CC_C_O
+AC_HEADER_STDC
 AM_PROG_LIBTOOL
+
+# ************
+# Typing Break
+# ************
+
+GLIB_REQUIRED=2.12.0
+GTK_REQUIRED=2.91.0
+LIBCANBERRA_REQUIRED=0
+
+PKG_CHECK_MODULES([TYPING],[
+  glib-2.0 >= $GLIB_REQUIRED
+  gconf-2.0
+  gtk+-3.0 >= $GTK_REQUIRED
+  libcanberra-gtk3 >= $LIBCANBERRA_REQUIRED
+  x11])
+
 AC_PATH_XTRA
-AM_PATH_GLIB_2_0
+x_libs="$X_PRE_LIBS $X_LIBS -lX11 $X_EXTRA_LIBS"
 
-AC_PROG_INTLTOOL([0.29])
+SCREENSAVER_LIBS=
+AC_CHECK_FUNC(XScreenSaverQueryInfo, [], [
+  save_LIBS=$LIBS
+  LIBS="$LIBS $X_PRE_LIBS $X_LIBS -lXss -lXext -lX11"
+  AC_CHECK_LIB(Xss, XScreenSaverQueryInfo, [
+    SCREENSAVER_LIBS="$X_PRE_LIBS $X_LIBS -lXss -lXext -lX11"], [
+    LIBS=$save_LIBS
+    LIBS="$LIBS $X_PRE_LIBS $X_LIBS -lXext -lX11"
+    AC_CHECK_LIB(Xext, XScreenSaverQueryInfo, [
+      SCREENSAVER_LIBS="$X_PRE_LIBS $X_LIBS -lXext -lX11"],[])])
+  LIBS=$save_LIBS])
+AC_SUBST(SCREENSAVER_LIBS)
 
-dnl ==========================================================================
-dnl
-dnl Library Dependencies, uses pkg-config to detect correct version, etc
-dnl
-dnl ==========================================================================
+# **********
+# GSD plugin
+# **********
 
-dnl If you add a version number here, you *must* add an AC_SUBST line for
-dnl it too, or it will never make it into the spec file!
+GSD_REQUIRED=2.91.0
 
-GLIB_REQUIRED=2.2.0
-PANGO_REQUIRED=1.2
-GTK_REQUIRED=2.2.0
-GCONF_REQUIRED=1.2.0
-LIBGLADE_REQUIRED=2.0.0
-LIBGNOMEUI_REQUIRED=2.0.0
-DESKTOP_FILE_UTILS_REQUIRED=0.2.90
+PKG_CHECK_MODULES([GSD_PLUGIN],[
+  gnome-settings-daemon >= $GSD_REQUIRED
+  gtk+-3.0
+  gdk-x11-3.0
+  gconf-2.0])
 
-AC_SUBST(GLIB_REQUIRED)
-AC_SUBST(PANGO_REQUIRED)
-AC_SUBST(GTK_REQUIRED)
-AC_SUBST(GCONF_REQUIRED)
-AC_SUBST(LIBGLADE_REQUIRED)
-AC_SUBST(LIBGNOMEUI_REQUIRED)
-AC_SUBST(DESKTOP_FILE_UTILS_REQUIRED)
+gsd_plugindir=`$PKG_CONFIG --variable plugindir gnome-settings-daemon`
+AC_SUBST([gsd_plugindir])
 
-dnl D-BUS
-dnl ==========================
-AC_ARG_ENABLE(dbus, [  --enable-dbus=[no/yes/auto]    compile with d-bus support.],,enable_dbus=auto)
+GSD_INTLTOOL_PLUGIN_RULE='%.gnome-settings-plugin:   %.gnome-settings-plugin.in   $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*.po) ; LC_ALL=C $(INTLTOOL_MERGE) -d -u -c $(top_builddir)/po/.intltool-merge-cache $(top_srcdir)/po $< [$]@'
+AC_SUBST([GSD_INTLTOOL_PLUGIN_RULE])
 
-if test "x$enable_dbus" != "xno"; then
-   dbus_pkgconfig="dbus-1 >= 0.50 dbus-glib-1"
-   PKG_CHECK_MODULES(DBUS, $dbus_pkgconfig, have_dbus=yes, have_dbus=no)
-   if test x$have_dbus = xyes; then
-      AC_DEFINE(HAVE_DBUS, 1, d-bus support)
-   fi
-else
-   have_dbus=no
-   dbus_pkgconfig=
-fi
+GSD_PLUGIN_LDFLAGS="-export_dynamic -module -avoid-version -no-undefined"
+case $host_os in
+  darwin*)
+    GSD_PLUGIN_LDFLAGS="${GSD_PLUGIN_LDFLAGS} -Wl,-bundle_loader,\$(top_builddir)/gnome-settings-daemon/gnome-settings-daemon"
+    ;;
+esac
+AC_SUBST([GSD_PLUGIN_LDFLAGS])
 
-if test "x$have_dbus" != "xyes"; then
-  if test "x$enable_dbus" = "xyes"; then
-      AC_MSG_ERROR([Couldn't find d-bus.])
-  else
-   dbus_pkgconfig=
-  fi
-fi
 
-AM_CONDITIONAL(HAVE_DBUS, test x$have_dbus = xyes)
+# *****************
+# Optional features
+# *****************
 
-dnl ================================
-dnl | Pkg-Config dependency checks |---------------------------
-dnl ================================
+AM_CONDITIONAL([HAVE_APP_INDICATOR],[false])
 
-PKG_CHECK_MODULES(DRWRIGHT,
-[
-	glib-2.0 >= $GLIB_REQUIRED
-	gobject-2.0
-	gtk+-2.0 >= $GTK_REQUIRED
-	gconf-2.0 >= $GCONF_REQUIRED
-	libglade-2.0 >= $LIBGLADE_REQUIRED 
-	libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED 	
-	$dbus_pkgconfig
-])
-
-AC_SUBST(DRWRIGHT_CFLAGS)
-AC_SUBST(DRWRIGHT_LIBS)
-dnl -----------------------------------------------------------
-
-dnl
-dnl Check for XScreenSaver extension
-dnl		
-
-dnl Check for XScreenSaver
-old_LIBS="$LIBS"
-old_CFLAGS="$CFLAGS"
-LIBS="$LIBS -L$x_libraries"
-CFLAGS="$CFLAGS -I$x_includes"
-AC_CHECK_LIB(Xext, XScreenSaverQueryInfo,[XSS_LIBS="-L$x_libraries"],[],[-lX11 -lXext -lm])
-AC_CHECK_LIB(Xss, XScreenSaverQueryInfo,[XSS_LIBS="-L$x_libraries -lXss"],[],[-lX11 -lXext -lm])
-LIBS="$old_LIBS"
-CFLAGS="$old_CFLAGS"
-if test "x$XSS_LIBS" = "x"; then
-  AC_MSG_ERROR([XScreenSaver extension not found])  
-fi
-AC_SUBST(XSS_LIBS)
-
-dnl  ------------------
-dnl | Language Support |---------------------------------------
-dnl  ------------------
-GETTEXT_PACKAGE=drwright
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", "")
-
-ALL_LINGUAS="ar az bg ca cs cy da de dz el en_CA en_GB es fi fr gu hr is it ja ko ml mn ms nb ne nl oc pl pt pt_BR ru rw sk sl sq sr sr@Latn sv tr uk vi wa zh_CN zh_TW"
-
-AM_GLIB_GNU_GETTEXT
-
-if test "x$prefix" = "xNONE"; then
-  DRWRIGHT_LOCALEDIR=$ac_default_prefix/share/locale
-else
-  DRWRIGHT_LOCALEDIR=$prefix/share/locale
-fi
-AC_DEFINE_UNQUOTED(DRWRIGHT_LOCALEDIR, "$DRWRIGHT_LOCALEDIR", "")
-dnl -----------------------------------------------------------
+# *****
+# GConf
+# *****
 
 AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
 
@@ -127,16 +111,23 @@ fi
 
 AM_GCONF_SOURCE_2
 
-AC_OUTPUT([
+# ****
+# i18n
+# ****
+
+GETTEXT_PACKAGE=drwright
+AC_SUBST([GETTEXT_PACKAGE])
+AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[Gettext package])
+AM_GLIB_GNU_GETTEXT
+IT_PROG_INTLTOOL([0.35.0])
+
+# ******************************************************************************
+# ******************************************************************************
+
+AC_CONFIG_FILES([
 Makefile
 src/Makefile
 po/Makefile.in
-data/Makefile
-data/images/Makefile
-data/glade/Makefile
-drwright.spec
 ])
 
-echo
-echo D-BUS support: $have_dbus
-echo
+AC_OUTPUT
