--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,4 +2,5 @@ src/main.c
 src/drwright.c
 src/drw-break-window.c
 src/drw-monitor.c
-src/drwright.schemas.in
+src/org.gnome.settings-daemon.plugins.TypingBreak.gschema.xml.in
+
