--- a/src/org.gnome-settings-daemon.plugins.TypingBreak.gschema.xml.in
+++ b/src/org.gnome-settings-daemon.plugins.TypingBreak.gschema.xml.in
@@ -33,10 +33,12 @@
       <_summary>Whether the typing break can be postponed</_summary>
     </key>
     <key name="type-time" type="i">
+      <range min="5" max="120" />
       <default>60</default>
       <_summary>Number of minutes of typing time before break mode starts</_summary>
     </key>
     <key name="break-time" type="i">
+      <range min="1" max="60" />
       <default>3</default>
       <_summary>Number of minutes that the typing break should last</_summary>
     </key>
