--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,8 @@
+[encoding: UTF-8]
 src/main.c
 src/drwright.c
 src/drw-break-window.c
 src/drw-monitor.c
 src/org.gnome.settings-daemon.plugins.TypingBreak.gschema.xml.in
-
+src/gnome-typing-break-panel.desktop.in.in
+[type: gettext/glade]src/drwright-panel.glade
