Change schema name
g-s-d expects the schema name to be derived from the module name, so use
"typing-break" instead of "TypingBreak".

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,6 +3,6 @@ src/main.c
 src/drwright.c
 src/drw-break-window.c
 src/drw-monitor.c
-src/org.gnome.settings-daemon.plugins.TypingBreak.gschema.xml.in
+src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in
 src/gnome-typing-break-panel.desktop.in.in
 [type: gettext/glade]src/drwright-panel.glade
