--- a/src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in
+++ b/src/org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in
@@ -17,7 +17,7 @@
   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 -->
 <schemalist>
-  <schema id="org.gnome.settings-daemon.plugins.TypingBreak"
+  <schema id="org.gnome.settings-daemon.plugins.typing-break"
           path="/org/gnome/settings-daemon/plugins/typing-break/"
           gettext-domain="drwright">
     <key name="active" type="b">
