Add persistent notification support
GNOME bug 643535 part 2

--- a/configure.in
+++ b/configure.in
@@ -44,6 +44,7 @@ GLIB_REQUIRED=2.26.0
 GIO_REQUIRED=2.26.0
 GTK_REQUIRED=3.0.0
 LIBCANBERRA_REQUIRED=0
+LIBNOTIFY_REQUIRED=0.7
 GSD_REQUIRED=2.91.8
 GNOMECC_REQUIRED=2.91.6
 
@@ -56,6 +57,7 @@ PKG_CHECK_MODULES([TYPING],[
   gio-2.0 >= $GIO_REQUIRED
   gtk+-3.0 >= $GTK_REQUIRED
   libcanberra-gtk3 >= $LIBCANBERRA_REQUIRED
+  libnotify >= $LIBNOTIFY_REQUIRED
   x11])
 
 AC_PATH_XTRA
