Make the panel text be more in line with other panel items
Don't say "preferences" and have the comment be more descriptive.

--- a/src/gnome-typing-break-panel.desktop.in.in
+++ b/src/gnome-typing-break-panel.desktop.in.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Typing Break Preferences
-_Comment=Typing Break preferences panel
+_Name=Typing Break
+_Comment=Change typing break settings
 Exec=gnome-control-center typing-break
 Icon=typing-monitor
 Terminal=false
