--- a/configure.in
+++ b/configure.in
@@ -99,10 +99,9 @@ AC_SUBST([GSD_PLUGIN_LDFLAGS])
 # Control centre panel
 # ********************
 
-PKG_CHECK_MODULES([CCPANEL],[
-  libgnome-control-center >= $GNOMECC_REQUIRED])
+PKG_CHECK_MODULES([CCPANEL],[gio-2.0 gtk+-3.0])
 
-ccpanelsdir=`$PKG_CONFIG --variable=extensiondir libgnome-control-center`
+ccpanelsdir='${libdir}/control-center-1/panels'
 AC_SUBST([ccpanelsdir])
 
 CCPANEL_LDFLAGS="-export_dynamic -avoid-version -module -no-undefined -export-symbols-regex '^g_io_module_(load|unload)'"
