--- a/configure.in
+++ b/configure.in
@@ -33,8 +33,10 @@ AC_STDC_HEADERS
 AC_PROG_CC
 AM_PROG_CC_C_O
 AC_HEADER_STDC
-AM_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG
+
+LT_INIT
+LT_LIB_M
 
 # ************
 # Requirements
