Use Keywords in desktop file
Renamed from X-GNOME-Keywords.

--- a/src/gnome-typing-break-panel.desktop.in.in
+++ b/src/gnome-typing-break-panel.desktop.in.in
@@ -11,4 +11,4 @@ Categories=GNOME;GTK;Settings;DesktopSettings;X-GNOME-Settings-Panel;X-GNOME-Per
 OnlyShowIn=GNOME;
 X-GNOME-Settings-Panel=typing-break
 # Translators: those are keywords for the example control-center panel
-_X-GNOME-Keywords=Typing;Break;RSI;Workrave;
+_Keywords=Typing;Break;RSI;Workrave;
