Also use X-GNOME-Keywords for backward compat

--- a/src/gnome-typing-break-panel.desktop.in.in
+++ b/src/gnome-typing-break-panel.desktop.in.in
@@ -12,3 +12,4 @@ OnlyShowIn=GNOME;
 X-GNOME-Settings-Panel=typing-break
 # Translators: those are keywords for the example control-center panel
 _Keywords=Typing;Break;RSI;Workrave;
+_X-GNOME-Keywords=Typing;Break;RSI;Workrave;
