Install gnome-typing-monitor in $(pkglibexec)
This is an executable binary, not a library so it should go in
$(pkglibexec), not $(pkglib).

https://bugzilla.gnome.org/show_bug.cgi?id=672553

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@ NULL =
 
 # Typing break
 
-pkglib_PROGRAMS = gnome-typing-monitor
+pkglibexec_PROGRAMS = gnome-typing-monitor
 
 gnome_typing_monitor_SOURCES =			\
 	main.c					\
@@ -69,7 +69,7 @@ libtyping_break_la_SOURCES = 		\
 
 libtyping_break_la_CPPFLAGS = \
 	-DGNOME_SETTINGS_LOCALEDIR=\""$(datadir)/locale"\" \
-	-DPKGLIBDIR=\""$(pkglibdir)"\"	\
+	-DPKGLIBEXECDIR=\""$(pkglibexecdir)"\"	\
 	$(AM_CPPFLAGS)
 
 libtyping_break_la_CFLAGS = \
