--- a/configure.in
+++ b/configure.in
@@ -20,7 +20,7 @@ AC_INIT([Typing Break],
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
-AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])
+AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2 -Wno-portability])
 
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
@@ -42,8 +42,9 @@ LT_LIB_M
 # Requirements
 # ************
 
-GLIB_REQUIRED=2.26.0
-GIO_REQUIRED=2.26.0
+GLIB_REQUIRED=2.31.13
+GIO_REQUIRED=2.31.13
+GDK_PIXBUF_REQUIRED=2.25.3
 GTK_REQUIRED=3.0.0
 LIBCANBERRA_REQUIRED=0
 LIBNOTIFY_REQUIRED=0.7
@@ -56,6 +57,7 @@ GSD_REQUIRED=2.91.8
 PKG_CHECK_MODULES([TYPING],[
   glib-2.0 >= $GLIB_REQUIRED
   gio-2.0 >= $GIO_REQUIRED
+  gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED
   gtk+-3.0 >= $GTK_REQUIRED
   libcanberra-gtk3 >= $LIBCANBERRA_REQUIRED
   libnotify >= $LIBNOTIFY_REQUIRED
@@ -105,6 +107,12 @@ AC_SUBST([ccpanelsdir])
 AC_PATH_PROG([GTK_BUILDER_CONVERT],[gtk-builder-convert],[false])
 if test "$GTK_BUILDER_CONVERT" = "false"; then
   AC_MSG_ERROR([gtk-builder-convert not found])
+fi
+
+AC_ARG_VAR([GLIB_COMPILE_RESOURCES],[the glib-compile-resources programme])
+AC_PATH_PROG([GLIB_COMPILE_RESOURCES],[glib-compile-resources],[])
+if test -z "$GLIB_COMPILE_RESOURCES"; then
+  AC_MSG_ERROR([glib-compile-resources not found])
 fi
 
 # *********
